--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portifolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ViniciusBeserraA.github.io/Portifolio",
   "dependencies": {
     "@fontsource/space-grotesk": "^4.5.10",
     "@react-three/fiber": "^8.10.0",
@@ -30,9 +31,7 @@
     "tsparticles": "^2.7.1",
     "typescript": "^4.9.3",
     "typewriter-effect": "^2.19.0",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://ViniciusBeserraA.github.io/Portifolio"
-
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
