alteracoes de links, about me e insercao de novos icones

--- a/package.json
+++ b/package.json
@@ -16,13 +16,12 @@
     "@types/three": "^0.148.0",
     "aos": "^2.3.4",
     "gh-pages": "^6.1.1",
-    "particles.js": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-media": "^1.10.0",
     "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-switch": "^7.0.0",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
